[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Sprites/Player_sprites/Player_sprite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MovimentHandle.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player_body.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Anims_handle.gd" type="Script" id=4]
[ext_resource path="res://Scripts/StateM_handler.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Physic_handler.gd" type="Script" id=6]

[sub_resource type="Animation" id=9]
resource_name = "Climbing"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73, 74, 75 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Idle_WG"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Jump_WG"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Landing_WG"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 63, 64 ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64, 0.72 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "crouched"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 100, 101, 102 ]
}

[sub_resource type="Animation" id=7]
resource_name = "falling"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34 ]
}

[sub_resource type="Animation" id=6]
length = 0.32
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43 ]
}

[sub_resource type="Animation" id=2]
resource_name = "jump"
length = 0.1
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}

[sub_resource type="Animation" id=8]
resource_name = "landing"
length = 0.25
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37 ]
}

[sub_resource type="Animation" id=14]
resource_name = "walking_WG"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="CapsuleShape2D" id=10]
radius = 8.8302
height = 16.9235

[node name="Player_body" type="KinematicBody2D" groups=["Player"]]
position = Vector2( -5, 0 )
script = ExtResource( 3 )

[node name="movement_handle" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="StateM_handler" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Anims_handle" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Anims_handle"]
anims/Climbing = SubResource( 9 )
anims/Idle_WG = SubResource( 11 )
anims/Jump_WG = SubResource( 12 )
anims/Landing_WG = SubResource( 13 )
anims/Move = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/crouched = SubResource( 5 )
anims/falling = SubResource( 7 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 2 )
anims/landing = SubResource( 8 )
anims/walking_WG = SubResource( 14 )

[node name="Physic_handler" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Player_sprite" type="Sprite" parent="."]
position = Vector2( 1.5, -0.499 )
texture = ExtResource( 1 )
offset = Vector2( -2.71012, -1.96012 )
flip_h = true
hframes = 10
vframes = 13

[node name="CollisionArea" type="CollisionShape2D" parent="."]
position = Vector2( 2.1767, -0.682293 )
shape = SubResource( 10 )

[node name="right_foot" type="RayCast2D" parent="."]
position = Vector2( 7, 17.8 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="left_foot" type="RayCast2D" parent="."]
position = Vector2( -2, 17.8 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="landing_space" type="RayCast2D" parent="."]
position = Vector2( 2, 9 )
scale = Vector2( 2.5, 1 )
enabled = true
cast_to = Vector2( 0, 30 )
collide_with_areas = true

[node name="foot_raycast" type="RayCast2D" parent="."]
position = Vector2( 2, 0 )
scale = Vector2( 2.5, 1 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Label" type="Label" parent="."]
margin_left = -7.93229
margin_top = -26.2701
margin_right = 37.0677
margin_bottom = -12.2701
rect_scale = Vector2( 0.5, 0.5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
